--- a/src/usr_03.tex
+++ b/src/usr_03.tex
@@ -649,7 +649,7 @@ Vim enables you to place your own marks in the text.
 The command "\verb!ma!" marks the place under the cursor as mark a.
 You can place 26 marks (a through z) in your text.
 You can't see them, it's just a position that Vim remembers.
-To go to a mark, use the command \verb!`{mark}!, where {mark} is the mark letter.
+To go to a mark, use the command \verb!`{mark}!, where \verb!{mark}! is the mark letter.
 Thus to move to the a mark:
 
  \begin{Verbatim}[samepage=true]
