--- a/src/usr_08.tex
+++ b/src/usr_08.tex
@@ -124,7 +124,7 @@ To set the window height to a specified number of lines:
  {height}CTRL-W _
  \end{Verbatim}
 
-That's: a number {height}, CTRL-W and then an underscore (the - key with Shift on English-US keyboards).
+That's: a number \verb!{height},! CTRL-W and then an underscore (the - key with Shift on English-US keyboards).
 
 To make a window as high as it can be, use the CTRL-W \_ command without a count.
 
