--- a/src/usr_41.tex
+++ b/src/usr_41.tex
@@ -392,7 +392,7 @@ The generic form is:
     :endif
 \end{Verbatim}
 
-Only when the expression {condition} evaluates to true (non-zero) will the {statements} be executed.
+Only when the expression \verb!{condition}! evaluates to true (non-zero) will the \verb!{statements}! be executed.
 These must still be valid commands.
 If they contain garbage, Vim won't be able to find the "\verb!:endif!".
 
@@ -407,7 +407,7 @@ The generic form for this is:
     :endif
 \end{Verbatim}
 
-The second {statements} is only executed if the first one isn't.
+The second \verb!{statements}! is only executed if the first one isn't.
 
 Finally, there is "\verb!:elseif!":
 
