--- a/src/usr_40.tex
+++ b/src/usr_40.tex
@@ -392,7 +392,7 @@ The values for this option are as follows:
 \begin{center} \begin{tabular}{l l}
 				\verb;-range; & Range is allowed; default is the current line. \\
 				\verb;-range=%; & Range is allowed; default is the whole file. \\
-				\verb;-range={count}; & Range is allowed; the last number in it is used as a single number whose default is {count}. \\
+				\verb;-range={count}; & Range is allowed; the last number in it is used as a single number whose default is \verb!{count}!. \\
 \end{tabular} \end{center}
 
 When a range is specified, the keywords <line1> and <line2> get the values of the first and last line in the range.
@@ -405,7 +405,7 @@ For example, the following command defines the SaveIt command, which writes out 
 Some of the other options and keywords are as follows:
 
 \begin{center} \begin{tabularx}{l X} % This went off the page; changed to tabularx TMC
-				\verb;-count={number}; & The command can take a count whose default is {number}.
+				\verb;-count={number}; & The command can take a count whose default is \verb!{number}!.
 				The resulting count can be used through the <count> keyword. \\
 				\verb;-bang; & You can use a \verb:!:.
 				If present, using <bang> will result in a \verb:!:. \\
@@ -548,7 +548,7 @@ This makes it easier to write the pattern, since a backslash has a special meani
 It also makes the autocommands portable.
 
 \subsubsection{Deleting}
-To delete an autocommand, use the same command as what it was defined with, but leave out the {command} at the end and use a \verb;!;.
+To delete an autocommand, use the same command as what it was defined with, but leave out the \verb!{command}! at the end and use a \verb;!;.
 Example:
 
 \begin{Verbatim}[samepage=true]
@@ -585,7 +585,7 @@ To list all autocommands for the cprograms group:
 \end{Verbatim}
 
 \subsubsection{Groups}
-The {group} item, used when defining an autocommand, groups related autocommands together.
+The \verb!{group}! item, used when defining an autocommand, groups related autocommands together.
 This can be used to delete all the autocommands in a certain group, for example.
 
 When defining several autocommands for a certain group, use the "\verb!:augroup!" command.
